tests/neg/fresh2.scala
struct Ref()
def main(): Unit =
  val x = Ref()
  def foo(x: Ref^): Ref^ = x  // error

